2015-07-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GSIMap.h: add GSI_MAP_TABLE_S
	* Source/NSConcreteHashTable.m:
	* Source/NSConcreteMapTable.m:
	Pass variable holding run time size calculation as GSI_MAP_TABLE_S

2015-07-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConcreteHashTable.m:
	* Source/NSConcreteMapTable.m:
	Get instance size at run time, so we can compile using nonfragile-abi

2015-07-16 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSSet.m
	* Source/GSCountedSet.m:
	Fix a few more names.

2015-07-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GSIMap.h:
	* Headers/GNUstepBase/NSObject+GNUstepBase.h:
	* Source/Additions/GSMime.m:
	* Source/Additions/NSObject+GNUstepBase.m:
	* Source/GSArray.m:
	* Source/GSCountedSet.m:
	* Source/GSDictionary.m:
	* Source/GSPrivate.h:
	* Source/GSSet.m:
	* Source/GSString.m:
	* Source/NSArray.m:
	* Source/NSData.m:
	* Source/NSDictionary.m:
	* Source/NSObject.m:
	* Source/NSSet.m:
	* Source/NSString.m:
	Rewriting naive implementations to improve efficiency and fix a few
	bugs as well as renaming to avoid conflict with old GSCache.

2015-07-16 Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/GNUstepBase/NSHashTable+GNUstepBase.h
	* Source/Additions/GNUmakefile
	* Source/Additions/NSHashTable+GNUstepBase.m
	* Source/GNUmakefile
	* Tests/base/NSHashTable/additions.m:
	Implement -addObjectsFromArray: on NSHashTable.

2015-07-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/GSIMap.h:
	* Headers/GNUstepBase/NSObject+GNUstepBase.h:
	* Source/Additions/GSMime.m:
	* Source/Additions/NSObject+GNUstepBase.m:
	* Source/GSArray.m:
	* Source/GSCountedSet.m:
	* Source/GSDictionary.m:
	* Source/GSPrivate.h:
	* Source/GSSet.m:
	* Source/GSString.m:
	* Source/NSArray.m:
	* Source/NSData.m:
	* Source/NSDictionary.m:
	* Source/NSObject.m:
	* Source/NSSet.m:
	* Source/NSString.m:
	Extension API to interrogate object memory usage (stolen from